--- a/index.html
+++ b/index.html
@@ -283,11 +283,10 @@
                   <img src="assets/img/personnel/ceo1.JPG" class="team-img" alt="">
                 </div>
                 <a href="#" class="stretched-link">
-                  <h3>ประพันธุ์ โสรส “บัก เจมส์”</h3>
+                  <h3>ประพันธุ์ โสรส “เจมส์”</h3>
                 </a>
                 <h5>Ceo & Marketing</h5>
                 <p>
-                ผู้ที่พลัดหลงจากกลุ่ม U2T บ้านติ๋ว จากทำผลิตภัณฑ์โกโก้บ้านติ้ว มาสู่โกโก้นางั่วในปัจจุบัน
                 </p>
               </div>
             </div>
