--- a/story.html
+++ b/story.html
@@ -448,12 +448,12 @@
           <div class="col-lg-10 m-auto">
             <div class="book-table-img-slider" id="icon">
               <div class="swiper-wrapper">
-                <a href="assets/images/category-1.jpg" data-toggle="lightbox" data-gallery="example-gallery"
+                     <a href="assets/img/product/story/DSC01817.JPG" data-toggle="lightbox" data-gallery="example-gallery"
                   class="book-table-img back-img swiper-slide"
-                  style="background-image: url(assets/images/category-1.jpg)"></a>
-                <a href="assets/images/category-2.jpg" data-toggle="lightbox" data-gallery="example-gallery"
+                  style="background-image: url(assets/img/product/story/DSC01817.JPG)"></a>
+                <a href="assets/img/product/story/DSC01827.JPG" data-toggle="lightbox" data-gallery="example-gallery"
                   class="book-table-img back-img swiper-slide"
-                  style="background-image: url(assets/images/category-2.jpg)"></a>
+                  style="background-image: url(assets/img/product/story/DSC01827.JPG)"></a>
                 <a href="assets/img/product/story/Nibs.JPG" data-toggle="lightbox" data-gallery="example-gallery"
                   class="book-table-img back-img swiper-slide"
                   style="background-image: url(assets/img/product/story/Nibs.JPG)"></a>
