--- a/story.html
+++ b/story.html
@@ -81,15 +81,15 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <div class="header-social-links">
+     <!-- <div class="header-social-links">
 
         <a href="https://www.facebook.com/Cocoanangua" target="_blank"><i class="bi bi-facebook"></i></a>
         <a href="https://line.me/R/ti/p/@876kshjj?oat_content=url&ts=03281801" target="_blank"><i
             class="bi bi-line"></i></a>
-        <!--<a href="https://www.instagram.com/nangua.cocoa/" target="_blank"><i class="bi bi-instagram" target="_blank"></i></a>
+        <a href="https://www.instagram.com/nangua.cocoa/" target="_blank"><i class="bi bi-instagram" target="_blank"></i></a>
         <a href="https://www.tiktok.com/@cocoanangua" target="_blank"><i class="bi bi-tiktok"></i></a>
-          <a href="https://x.com/nanguacocoa" target="_blank"><i class="bi bi-twitter-x" target="_blank"></i></a>-->
-      </div>
+          <a href="https://x.com/nanguacocoa" target="_blank"><i class="bi bi-twitter-x" target="_blank"></i></a>
+      </div>-->
     </div>
   </header>
 
